--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a Node.JS exercise that connect with MongoDB using Express",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/AlexB95/NodeJSExercise/issues"
   },
-  "homepage": "https://github.com/AlexB95/NodeJSExercise#readme"
+  "homepage": "https://github.com/AlexB95/NodeJSExercise#readme",
+  "dependencies": {
+    "express": "^4.16.2",
+    "mongoose": "^5.0.8",
+    "nodemon": "^1.17.1",
+    "save-dev": "^2.0.0"
+  }
 }
