--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/AlexB95/NodeJSExercise#readme",
   "dependencies": {
     "express": "^4.16.2",
+    "mongodb": "^3.0.3",
     "mongoose": "^5.0.8",
     "nodemon": "^1.17.1",
     "save-dev": "^2.0.0"
